# sayclearly

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: frontend-bundle.yml
docs/: sayclearly_mvp_spec_en.md  stages.md
docs/commands/: create_update_AGENTS.md  plan_feature.md  save_existed_plan.md
docs/features/: 0001_PLAN_low_hanging_fruit_cleanup.md  0002_PLAN_catalog_entry_to_pydantic_model.md  0003_PLAN_post_mvp_ux_fixes.md  0004_PLAN_topic_history_modal_and_language_restore.md  0005_PLAN_frontend_stabilization_process_and_modularization.md  0006_PLAN_settings_modal_redesign.md  0007_PLAN_audio_analysis_quality.md
frontend-tests/: app.test.js  app_state.test.js
scripts/: check_api_types.py  check_frontend_bundle.py  generate_openapi.py
src/sayclearly/: __init__.py  app.py  config_api.py  config_models.py  config_service.py  history_api.py  history_service.py  main.py  storage.py
src/sayclearly/config/: api.py  models.py  service.py
tests/: __init__.py  test_app_shell.py  test_config_api.py  test_config_service.py  test_exercise_api.py  test_exercise_prompts.py  test_exercise_service.py  test_frontend_state_bundle.py  test_gemini_catalog.py  test_gemini_client.py  test_gemini_telemetry.py  test_history_api.py  test_history_service.py  test_recording_api.py  test_recording_prompts.py  test_recording_service.py  test_smoke.py  test_stage_3_flow_integration.py  test_stage_4_flow_integration.py  test_stage_7_flow_integration.py  test_storage.py
(+53 files in other folders)
