[project]
name = "sayclearly"
version = "0.1.0"
description = "Local diction training tool with Gemini-based feedback."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sayclearly = "sayclearly.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
